<resources>
    <string name="app_name">HelloSmali</string>
    <string name="info">Android程序破解示例</string>
    <string name="name">用户名：</string>
    <string name="sn">注册码：</string>
    <string name="register">注册</string>
    <string name="hint_name">请输入用户名</string>
    <string name="hint_sn">请输入16位的注册码</string>
    <string name="unregister">程序未注册</string>
    <string name="registered">程序已注册</string>
    <string name="unsucceessed">无效用户名或注册码</string>
    <string name="successed">恭喜您，注册成功！</string>
</resources>
